<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">

    <LinearLayout
        android:paddingTop="5dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/lay_search"
        android:focusable="true"
        android:paddingHorizontal="4dp"
        android:paddingBottom="4dp"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/filter_box_background"
            android:clickable="true"
            android:drawableStart="@drawable/ic_search_grey_24dp"
            android:drawableLeft="@drawable/ic_search_grey_24dp"
            android:drawablePadding="8dp"
            android:focusable="true"
            android:hint="Cari"
            android:padding="12dp" />

        <FrameLayout
            android:background="@drawable/filter_box_background"
            android:id="@+id/coll_lay"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            android:layout_gravity="center_vertical"
            android:layout_height="match_parent">

            <ade.dicoding.sub2.view.SpinnerReselect
                android:id="@+id/sp_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:clickable="false" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                app:srcCompat="@drawable/ic_chevron_down" />
        </FrameLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lay_search"
        tools:listitem="@layout/items_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>